--- a/deployments/deployment.yaml
+++ b/deployments/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: myapp-deployments
   labels:
+    tier: frontend
     app: nginx
 spec:
-  replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: myapp
+  replicas: 3
   template:
     metadata:
+      name: nginx-2
       labels:
-        app: nginx
+        app: myapp
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
-        ports:
-        - containerPort: 80
+        - name: nginx
+          image: nginx
