--- a/deployments/nginx-deployment.yaml
+++ b/deployments/nginx-deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-deployment
+  name: nginx-deployments
   labels:
-    tier: frontend
     app: nginx
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: myapp
-  replicas: 3
+      app: nginx
   template:
     metadata:
-      name: nginx-2
       labels:
-        app: myapp
+        app: nginx
     spec:
       containers:
-        - name: nginx
-          image: nginx
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
